Se crea reporte de ddp04 ys e hace mejoras sobre el flujo ddp04

--- a/src/main/resources/templatesEmail/emailPruebaNoEjecutadaDefinitiva.html
+++ b/src/main/resources/templatesEmail/emailPruebaNoEjecutadaDefinitiva.html
@@ -17,25 +17,24 @@
                 style="padding: 10px 20px; font-family: Arial, Helvetica, sans-serif; font-size: 14px; font-weight: 400; color: rgb(56, 56, 56); text-align: left;"
                 class="tblCell">
                 <div style="line-height: 200%;">
-                    <p style="font-size: 16px">Estimado(a) Usuario:</p>
-                    <p>Se informa la <b>NO EJECUCIÓN</b> de la prueba en proceso de la solicitud <b th:text="${codigo}">SP000001</b> con el siguiente
-                        detalle</p>
+                    <p style="font-size: 16px">Estimado(a) Usuario</p>
+                    <p>La solicitud <b th:text="${codigo}">SP000001</b> ha finalizado con la <b>NO EJECUCIÓN</b> de la prueba en proceso.</p>
                     <p>Motivo:</b> <span th:text="${observacion}">No hay materia prima</span></p>
-                    <table class="detalle">
-                        <tr class="detalle">
-                            <th class="detalle" style=" font-weight: 100; text-align:left; width:40%">Responsable:</th>
-                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${usuarioResponsable}">Federico Perez</b></th>
-                        </tr>
-                        <tr>
-                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Fecha inicio prueba:</th>
-                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${fechaPrueba}">22/09/2022</b></th>
-                        </tr>
-                        <tr>
-                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Fecha entrega informe:</th>
-                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${fechaEntregaInforme}">22/09/2022</b></th>
-                        </tr>
+<!--                    <table class="detalle">-->
+<!--                        <tr class="detalle">-->
+<!--                            <th class="detalle" style=" font-weight: 100; text-align:left; width:40%">Responsable:</th>-->
+<!--                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${usuarioResponsable}">Federico Perez</b></th>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Fecha inicio prueba:</th>-->
+<!--                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${fechaPrueba}">22/09/2022</b></th>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Fecha entrega informe:</th>-->
+<!--                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${fechaEntregaInforme}">22/09/2022</b></th>-->
+<!--                        </tr>-->
 
-                    </table>
+<!--                    </table>-->
                 </div>
             </td>
         </tr>
