Se agregar validación para adjuntar informe cuando sea requerido Se corrige bug en reporte ddp05 Se modifica plantilla de correo pruebas realizadas

--- a/src/main/resources/templatesEmail/emailPruebaEjecutada.html
+++ b/src/main/resources/templatesEmail/emailPruebaEjecutada.html
@@ -30,7 +30,7 @@
                             <th class="detalle" style="text-align:left; width:60%"><b th:text="${fechaPrueba}">22/09/2022</b></th>
                         </tr>
                         <tr>
-                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Fecha entrega informe:</th>
+                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Fecha máxima entrega informe:</th>
                             <th class="detalle" style="text-align:left; width:60%"><b th:text="${fechaEntregaInforme}">22/09/2022</b></th>
                         </tr>
 
