--- a/src/main/resources/templatesEmail/emailSolicitudEnsayoIngresoMuestra.html
+++ b/src/main/resources/templatesEmail/emailSolicitudEnsayoIngresoMuestra.html
@@ -4,10 +4,10 @@
         xmlns:th="http://www.thymeleaf.org"
         layout:decorate="~{emailLayout}">
 <head>
-    <title>Ejecución Prueba en Proceso</title>
+    <title>Confirmación ingreso de muestra</title>
 </head>
 <body>
-<h3 layout:fragment="titulo">Solicitud Ensayo Finalizada</h3>
+<h3 layout:fragment="titulo">Solicitud Ensayo Ingreso de Muestra</h3>
 <div layout:fragment="contenido">
 
     <table cellspacing="0" cellpadding="0" border="0" class="bmeImageTable" width="700" style="padding: 0px !important;" dimension="100%">
@@ -17,9 +17,9 @@
                 style="padding: 10px 20px; font-family: Arial, Helvetica, sans-serif; font-size: 14px; font-weight: 400; color: rgb(56, 56, 56); text-align: left;"
                 class="tblCell">
                 <div style="line-height: 200%;">
-                    <p style="font-size: 16px">Estimado(a) Usuario: <span th:text="${usuarioSolicitante}">Solicitante</span></p>
-                    <p>La solicitud de ensayo <b th:text="${codigo}">SP000001</b> se encuentra en estado <b th:text="${tipoAprobacion}">NO APROBADO</b></p>
-                    <p><b>Observación:</b> <span th:text="${observacion}">Solicitud Aprobada</span></p>
+                    <p style="font-size: 16px">Estimado(a) Usuario: <b th:text="${nombreUsuario}">WILFRIDO LOACHAMIN</b></p>
+                    <p>La solicitud <b th:text="${codigo}">SP000001</b> y el ingreso del material en validación ha sido ingresada con éxito.</p>
+                    <p>La fecha de entrega de resultados será: <b th:text="${fechaEntregaResultados}">16 de septiembre de 2022</b></p>
                 </div>
             </td>
         </tr>
