Se realizan cambios en todas las plantillas de correo electronico, se agrega campo de nombre comercial en solicitud de ensayos y se agrega opción de regresar solicitud al solicitante.

--- a/src/main/resources/templatesEmail/emailPruebaNoEjecutada.html
+++ b/src/main/resources/templatesEmail/emailPruebaNoEjecutada.html
@@ -36,6 +36,16 @@
                         </tr>
 
                     </table>
+                    <table class="detalle">
+                        <tr class="detalle">
+                            <th class="detalle" style=" font-weight: 100; text-align:left; width:40%">Área:</th>
+                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${area}">MANTENIMIENTO</b></th>
+                        </tr>
+                        <tr>
+                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Motivo de prueba:</th>
+                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${motivoPrueba}">PROBAR LA RESINA TIPO A EN EL IMPERGLAS</b></th>
+                        </tr>
+                    </table>
                 </div>
             </td>
         </tr>
