--- a/src/main/resources/templatesEmail/emailSolicitudEstado.html
+++ b/src/main/resources/templatesEmail/emailSolicitudEstado.html
@@ -25,6 +25,21 @@
                     </p>
                     <p><b>Motivo: </b> <span th:text="${observacion}">OBSERVACIÓN</span>.</p>
                     <p><b>Revisado Por: </b> <span th:text="${revisadoPor}">SANDRA VILLACIS</span>.</p>
+                    <table class="detalle">
+                        <tr class="detalle">
+                            <th class="detalle" style=" font-weight: 100; text-align:left; width:40%">Prioridad:</th>
+                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${prioridad}">ALTO</b></th>
+                        </tr>
+                        <tr>
+                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Proveedor:</th>
+                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${proveedor}">IMPTEK</b></th>
+                        </tr>
+                        <tr>
+                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Nombre Comercial:</th>
+                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${nombreComercial}">RESINA 2</b></th>
+                        </tr>
+                    </table>
+
                 </div>
             </td>
         </tr>
