--- a/src/main/resources/templatesEmail/emailAjusteMaquinariaSolicitudPP.html
+++ b/src/main/resources/templatesEmail/emailAjusteMaquinariaSolicitudPP.html
@@ -22,6 +22,16 @@
                     </p>
                     <p>Observación: <b th:text="${observacion}">NINGUNA</b></p>
                 </div>
+                <table class="detalle">
+                    <tr class="detalle">
+                        <th class="detalle" style=" font-weight: 100; text-align:left; width:40%">Área:</th>
+                        <th class="detalle" style="text-align:left; width:60%"><b th:text="${area}">MANTENIMIENTO</b></th>
+                    </tr>
+                    <tr>
+                        <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Motivo de prueba:</th>
+                        <th class="detalle" style="text-align:left; width:60%"><b th:text="${motivoPrueba}">PROBAR LA RESINA TIPO A EN EL IMPERGLAS</b></th>
+                    </tr>
+                </table>
             </td>
         </tr>
         <tr>
