--- a/src/main/resources/templatesEmail/emailIngresoSolicitudDDP04.html
+++ b/src/main/resources/templatesEmail/emailIngresoSolicitudDDP04.html
@@ -20,6 +20,16 @@
                     <p style="font-size: 16px">Estimado(a) Usuario: <b th:text="${nombreUsuario}">WILFRIDO LOACHAMIN</b></p>
                     <p>La solicitud <b th:text="${codigo}">SP000001</b> ha sido ingresada por el usuario <b th:text="${nombreSolicitante}">WILFRIDO LOACHAMIN</b>.</p>
                     <p> <b>Observación:</b><span th:text="${observacion}">Solicitud Ingresada</span> </p>
+                    <table class="detalle">
+                        <tr class="detalle">
+                            <th class="detalle" style=" font-weight: 100; text-align:left; width:40%">Área:</th>
+                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${area}">MANTENIMIENTO</b></th>
+                        </tr>
+                        <tr>
+                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Motivo de prueba:</th>
+                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${motivoPrueba}">PROBAR LA RESINA TIPO A EN EL IMPERGLAS</b></th>
+                        </tr>
+                    </table>
                 </div>
             </td>
         </tr>
