--- a/src/main/resources/templatesEmail/emailSolicitudDDP04Estado.html
+++ b/src/main/resources/templatesEmail/emailSolicitudDDP04Estado.html
@@ -4,22 +4,27 @@
         xmlns:th="http://www.thymeleaf.org"
         layout:decorate="~{emailLayout}">
 <head>
-    <title>Ejecución Prueba en Proceso</title>
+    <title>Solicitud Estado</title>
 </head>
 <body>
-<h3 layout:fragment="titulo">Ejecución Prueba en Proceso</h3>
+<h3 layout:fragment="titulo">Solicitud Estado</h3>
 <div layout:fragment="contenido">
 
-    <table cellspacing="0" cellpadding="0" border="0" class="bmeImageTable" width="700" style="padding: 0px !important;" dimension="100%">
+    <table cellspacing="0" cellpadding="0" border="0" class="bmeImageTable" width="700" style="padding: 0px !important;"
+           dimension="100%">
         <tbody>
         <tr>
             <td valign="top" align="left" name="tblCell"
                 style="padding: 10px 20px; font-family: Arial, Helvetica, sans-serif; font-size: 14px; font-weight: 400; color: rgb(56, 56, 56); text-align: left;"
                 class="tblCell">
                 <div style="line-height: 200%;">
-                    <p style="font-size: 16px">Estimado(a) Usuario</p>
-                    <p>La solicitud <b th:text="${codigo}">SP000001</b> ha finalizado con la <b>NO EJECUCIÓN</b> de la prueba en proceso.</p>
-                    <p>Motivo:</b> <span th:text="${observacion}">No hay materia prima</span></p>
+                    <p style="font-size: 16px">Estimado(a) Usuario: <b th:text="${nombreUsuario}">WILFRIDO LOACHAMIN</b>
+                    </p>
+                    <p>La solicitud <b th:text="${codigo}">SP000001</b> del tipo <b th:text="${tipoSolicitud}">SOLICITUD
+                        PRUEBAS EN PROCESO</b> fue <b th:text="${estado}">ANULADA</b>
+                    </p>
+                    <p><b>Motivo: </b> <span th:text="${observacion}">OBSERVACIÓN</span>.</p>
+                    <p><b>Revisado Por: </b> <span th:text="${revisadoPor}">SANDRA VILLACIS</span>.</p>
                     <table class="detalle">
                         <tr class="detalle">
                             <th class="detalle" style=" font-weight: 100; text-align:left; width:40%">Área:</th>
@@ -30,21 +35,7 @@
                             <th class="detalle" style="text-align:left; width:60%"><b th:text="${motivoPrueba}">PROBAR LA RESINA TIPO A EN EL IMPERGLAS</b></th>
                         </tr>
                     </table>
-<!--                    <table class="detalle">-->
-<!--                        <tr class="detalle">-->
-<!--                            <th class="detalle" style=" font-weight: 100; text-align:left; width:40%">Responsable:</th>-->
-<!--                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${usuarioResponsable}">Federico Perez</b></th>-->
-<!--                        </tr>-->
-<!--                        <tr>-->
-<!--                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Fecha inicio prueba:</th>-->
-<!--                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${fechaPrueba}">22/09/2022</b></th>-->
-<!--                        </tr>-->
-<!--                        <tr>-->
-<!--                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Fecha entrega informe:</th>-->
-<!--                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${fechaEntregaInforme}">22/09/2022</b></th>-->
-<!--                        </tr>-->
 
-<!--                    </table>-->
                 </div>
             </td>
         </tr>
