--- a/src/main/resources/templatesEmail/emailSolicitudReasignada.html
+++ b/src/main/resources/templatesEmail/emailSolicitudReasignada.html
@@ -24,6 +24,16 @@
                         PRUEBAS EN PROCESO</b> ha sido reasignada a usted para su gestión por
                         <b th:text="${nombreJefe}">JAIME NORONA</b> en el proceso de <b th:text="${orden}">PRODUCCIÓN</b>.
                     </p>
+                    <table class="detalle">
+                        <tr class="detalle">
+                            <th class="detalle" style=" font-weight: 100; text-align:left; width:40%">Área:</th>
+                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${area}">MANTENIMIENTO</b></th>
+                        </tr>
+                        <tr>
+                            <th class="detalle" style="font-weight: 100; text-align:left; width:40%">Motivo de prueba:</th>
+                            <th class="detalle" style="text-align:left; width:60%"><b th:text="${motivoPrueba}">PROBAR LA RESINA TIPO A EN EL IMPERGLAS</b></th>
+                        </tr>
+                    </table>
                 </div>
             </td>
         </tr>
